--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
   "devDependencies": {
-    "sass": "^1.26.3"
+    "sass": "^1.26.5"
+  },
+  "dependencies": {
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-svelte": "^4.0.6",
+    "svelte": "^3.22.2"
+  },
+  "name": "pokemon",
+  "version": "1.0.0",
+  "description": "A Pokemon battle sim built in Svelte",
+  "main": "index.js",
+  "repository": "https://github.com/didiercatz/pokemon.git",
+  "author": "Didier Catz <didierlennon@gmail.com>",
+  "license": "MIT",
+  "scripts": {
+    "start": "parcel index.html --port 3000",
+    "dev": "parcel index.html --port 3000",
+    "build": "rm -rf dist && parcel build index.html --no-source-maps"
   }
 }
